src/objects/Admissions_Document__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Admissions Documents</relationshipLabel>
        <relationshipName>Admissions_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Instructive_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Instructive Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_to_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display to Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Displayed_Name__c</fullName>
        <label>Displayed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High School Transcript</fullName>
                </value>
                <value>
                    <fullName>College Transcript</fullName>
                </value>
                <value>
                    <fullName>Letter of Recommendation</fullName>
                </value>
                <value>
                    <fullName>Paper Application</fullName>
                </value>
                <value>
                    <fullName>Essay</fullName>
                </value>
                <value>
                    <fullName>GI Bill</fullName>
                </value>
                <value>
                    <fullName>Housing Application</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Green Card</fullName>
                </value>
                <value>
                    <fullName>High School Diploma</fullName>
                </value>
                <value>
                    <fullName>College Diploma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Ready For Approval</fullName>
                </value>
                <value>
                    <fullName>Resubmit</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_URL__c</fullName>
        <label>Form URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instructive_Text__c</fullName>
        <label>Instructive Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Admissions Document</label>
    <nameField>
        <label>Admissions Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admissions Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>